[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/tools/point_array.gd" id="1_kx8aw"]

[node name="PointArray" type="Node"]
script = ExtResource("1_kx8aw")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
